fixed flicker on load

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -90,10 +90,12 @@ section {
             @include fontSizer(100);
             letter-spacing: 0;
             margin: 0;
+            opacity: 0;
         }
         h2 {
         	line-height: 0;
         	@include fontSizer(28);
+        	opacity: 0;
         	span.red {
         		color: $accent;
         	}
